# dobot_atom_ros2

./: Atom关节顺序名称与关节限位-EN.md  DDS接口-EN.md  DDS接口.md  README.md  README_CN.md  README_EN.md  高层RPC服务接口-EN.md
README/: ATOM Joint Order & Limits-EN.md  Atom关节顺序名称与关节限位.md  DDS Interface-EN.md  High-level RPC Service Interface-EN.md  高层RPC服务接口.md
atom_control_examples/: README.md  README_CN.md
atom_control_examples/src/: atom_dexterous_hands_controller.cpp  atom_full_body_trajectory_controller.cpp  atom_joint_recorder.cpp  hands_state_reader.cpp  lower_state_reader.cpp  upper_state_reader.cpp
atom_gazebo/: README.md  README_EN.md
atom_gazebo/config/: atom_w_p3_controllers.yaml
atom_gazebo/launch/: atom_arms_only.launch.py
atom_gazebo/urdf/: atom_gazebo_control.xacro
atom_gazebo/worlds/: empty.world
atom_p2_gazebo/: CMakeLists.txt  README.md  package.xml
atom_p2_gazebo/config/: atom_moveit.rviz
atom_p2_gazebo/launch/: atom_p2_arms_only.launch.py  atom_p2_gazebo.launch.py
atom_p2_gazebo/scripts/: control_arms.py
atom_urdf/meshes/atom_p2/: head_yaw_link.STL  left_elbow_pitch_link.STL  left_elbow_roll_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_pitch_link.STL  left_wrist_yaw_link.STL  leg_l1_link.STL  leg_l2_link.STL  leg_l3_link.STL  leg_l4_link.STL  leg_l5_link.STL  leg_l6_link.STL  leg_r1_link.STL  leg_r2_link.STL  leg_r3_link.STL  leg_r4_link.STL  leg_r5_link.STL  leg_r6_link.STL  pelvis.STL  right_elbow_pitch_link.STL  right_elbow_roll_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_pitch_link.STL  right_wrist_yaw_link.STL  torso_link.STL
atom_urdf/meshes/atom_p3/: head_pitch_link.STL  head_yaw_link.STL  left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_elbow_pitch_Link.STL  left_elbow_roll_Link.STL  left_hip_pitch_link.STL  left_hip_roll_link.STL  left_hip_yaw_link.STL  left_knee_link.STL  left_shoulder_pitch_Link.STL  left_shoulder_roll_Link.STL  left_shoulder_yaw_Link.STL  left_wrist_pitch_Link.STL  left_wrist_yaw_Link.STL  pelvis.STL  right_ankle_pitch_link.STL  right_ankle_roll_link.STL  right_elbow_pitch_Link.STL  right_elbow_roll_Link.STL  right_hip_pitch_link.STL  right_hip_roll_link.STL  right_hip_yaw_link.STL  right_knee_link.STL  right_shoulder_pitch_Link.STL  right_shoulder_roll_Link.STL  right_shoulder_yaw_Link.STL  right_wrist_pitch_Link.STL  right_wrist_yaw_Link.STL  torso_link.STL
atom_urdf/meshes/atom_w_p2/camera_bracket/: camera_bracket_right.stl
atom_urdf/meshes/atom_w_p2/robot/: body_yaw_link.STL  chassis_link.STL  crus_pitch_link.STL  left_elbow_roll_link.STL  left_shoulder_yaw_link.STL  right_elbow_roll_link.STL  right_shoulder_pitch_link.STL
atom_urdf/meshes/atom_w_p2/wheels/: left_whell_pitch_Link.STL  right_whell_pitch_Link.STL
atom_urdf/meshes/atom_w_p3/: calf_pitch_link.STL  head_pitch_link.STL  head_yaw_link.STL  left_elbow_pitch_Link.STL  left_elbow_roll_Link.STL  left_shoulder_pitch_Link.STL  left_shoulder_roll_Link.STL  left_shoulder_yaw_Link.STL  left_wheel_link.STL  left_wirst_pitch_Link.STL  left_wirst_yaw_Link.STL  right_elbow_pitch_Link.STL  right_elbow_roll_Link.STL  right_shoulder_pitch_Link.STL  right_shoulder_roll_Link.STL  right_shoulder_yaw_Link.STL  right_wheel_link.STL  right_wirst_pitch_Link.STL  right_wirst_yaw_Link.STL  thigh_pitch_Link.STL  waist_pitch_Link.STL
atom_urdf/meshes/atom_w_p3/camera_bracket/: camera_bracket_left.stl
atom_urdf/meshes/atom_w_p3/flange/: Flange-0518_fixed.stl
atom_urdf/meshes/atom_w_p3/robot/: head_yaw_link.STL  left_elbow_pitch_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_wrist_pitch_link.STL  left_wrist_yaw_link.STL  plevis_pitch_link.STL  right_elbow_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_pitch_link.STL  right_wrist_yaw_link.STL  thigh_pitch_link.STL
atom_urdf/urdf/atom_p2/: atom.urdf  atom_gazebo.xacro  atom_gazebo_control.xacro  atom_lower.urdf  atom_wholebody.urdf
atom_urdf/urdf/atom_p3/: atom_p3.urdf
atom_urdf/urdf/atom_w_p2/: atom-w-p2.urdf  atom_w_p2.urdf
atom_urdf/urdf/atom_w_p3/: atom-w-p2.urdf  atom-w-p3.urdf  atom_w_p3.urdf  atom_w_p3.xacro
dobot_atom/: CMakeLists.txt  README.md
dobot_atom/msg/: BmsCmd.msg  BmsInfo.msg  BmsLog.msg  CalibrateImu.msg  CartTargetPose.msg  CerebrumCmd.msg  CerebrumState.msg  CerebrumStatus.msg  ChangeMode.msg  DHGripperCmd.msg  DHGripperSingleCmd.msg  DHGripperSingleState.msg  DHGripperState.msg  EmergencyState.msg  GoHome.msg  InspireCmd.msg  InspireState.msg  LaserScan.msg  LowCmd.msg  LowState.msg  ModifyJointOffset.msg  Odom.msg  PlayTTS.msg  PosControlCmd.msg  PosControlJointQ.msg  PosControlState.msg  PowerCmd.msg  PowerState.msg  SetCalibrationFlag.msg  TeleopCmd.msg  TeleopCommand.msg  TeleopState.msg  TeleopStatus.msg  UpperState.msg
dobot_atom_rviz/launch/: atom_rviz.launch.py
dobot_atom_rviz/rviz/: atom.rviz
idl-develop/: amr_cmd.idl  amr_state.idl  bms_cmd.idl  bms_state.idl  calibrate_imu.idl  change_mode.idl  clear_errors.idl  emergency_state.idl  enable_motors.idl  go_home.idl  hands_cmd.idl  hands_state.idl  imu_state.idl  inspire_cmd.idl  inspire_state.idl  laserscan.idl  lowcmd.idl  lower_cmd.idl  lower_state.idl  lowstate.idl  main_nodes_state.idl  modify_joint_offset.idl  motor_cmd.idl  motor_state.idl  play_tts.idl  power_cmd.idl  power_state.idl  remote_control.idl  set_calibration_flag.idl  set_fsm_id.idl  switch_upper_control.idl  teleop_cmd.idl  teleop_state.idl  upper_cmd.idl  upper_state.idl
